--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ phases:
   install:
     commands:
       - npm install -g serverless
+      - serverless config credentials --provider aws --key $key --secret $secret
   build:
     commands:
       - npm install
