--- a/serverless.yml
+++ b/serverless.yml
@@ -73,6 +73,7 @@ functions:
       - http:
           path: getLastKey
           method: get
+          cors: true
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
